--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,3 +1,19 @@
+@import "~bootstrap/scss/bootstrap";
+
 body {
-    background-color: lightgray;
+    background: #4ca1af; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #c4e0e5, #4ca1af); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(
+        to right,
+        #c4e0e5,
+        #4ca1af
+    ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.put-data-section {
+    margin-top: 6rem;
+}
+
+.form-csv {
+    padding: 2rem;
 }
