--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -9,7 +9,8 @@
 		<section class="put-data-section">
 			<div class="container">
 				<div class="row form-csv rounded-2 justify-content-md-center align-items-center align-self-center bg-dark bg-gradient text-light">
-					<form>
+					<h2 class="text-center">Menagment of data - MCSV</h2>
+                    <form>
 						<div class="mb-3">
 							<label for="name" class="name">Name</label>
 							<input type="text" class="form-control" id="name">
@@ -24,7 +25,7 @@
 							<div id="emailHelp" class="form-text text-light">We'll never share your email with anyone else.</div>
 						</div>
                         <div class="mb-4">
-							<label for="tel" class="tel">Telephone</label>
+							<label for="tel" class="form-label">Telephone</label>
 							<input type="text" class="form-control" id="tel">
 						</div>
                         <div class="input-group mb-3">
