--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -10,7 +10,7 @@ body {
     ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-.put-data-section {
+.put-data-section, .csv-table-row {
     margin-top: 6rem;
 }
 
