--- a/templates/panel.html.twig
+++ b/templates/panel.html.twig
@@ -5,5 +5,46 @@ Panel Admina
 {% endblock %}
 
 {% block body %}
-<h1>Panel Admina</h1>
+<main>
+    <div class="container text-center">
+        <div class="row csv-table-row">
+          <div class="col">
+            <table class="table table-dark table-striped">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Surname</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Tel</th>
+                    <th scope="col">FileURL</th>
+                    <th scope="col">Edit Row</th>
+                    <th scope="col">Delete Row</th>
+                  </tr>
+                </thead>
+                <tbody>
+                    {% for c in csv %}
+                  <tr>
+                    <th scope="row">{{c.id}}</th>
+                    <td>{{c.name}}</td>
+                    <td>{{c.surname}}</td>
+                    <td>{{c.email}}</td>
+                    <td>{{c.telephone}}</td>
+                    <td>{{c.fileurl}}</td>
+                    <td><a href="/edit/{{c.id}}"><button type="button" class="btn btn-primary">Edit</button></a></td>
+                    <td><a href="/delete/{{c.id}}"><button type="danger" class="btn btn-danger">Remove</button></a></td>
+                  </tr>
+                    {% endfor %}
+                </tbody>
+              </table>
+          </div>
+        </div>
+      </div>
+    
+      
+        
+      
+
+
+</main>
 {% endblock %}
