--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -10,26 +10,26 @@
 			<div class="container">
 				<div class="row form-csv rounded-2 justify-content-md-center align-items-center align-self-center bg-dark bg-gradient text-light">
 					<h2 class="text-center">Menagment of data - MCSV</h2>
-                    <form>
+                    <form method="post" action="/add">
 						<div class="mb-3">
 							<label for="name" class="name">Name</label>
-							<input type="text" class="form-control" id="name">
+							<input name="name" type="text" class="form-control" id="name">
 						</div>
                         <div class="mb-3">
 							<label for="surname" class="surname">Surname</label>
-							<input type="text" class="form-control" id="surname">
+							<input name="surname" type="text" class="form-control" id="surname">
 						</div>
 						<div class="mb-3">
 							<label for="e-mail" class="form-label">Email address</label>
-							<input type="email" class="form-control" id="email">
+							<input name="email" type="email" class="form-control" id="email">
 							<div id="emailHelp" class="form-text text-light">We'll never share your email with anyone else.</div>
 						</div>
                         <div class="mb-4">
 							<label for="tel" class="form-label">Telephone</label>
-							<input type="text" class="form-control" id="tel">
+							<input name="tel" type="text" class="form-control" id="tel">
 						</div>
                         <div class="input-group mb-3">
-                            <input type="file" class="form-control" id="input-file">
+                            <input name="file" type="file" class="form-control" id="input-file">
                         </div>
                         <div class="mb-3 form-check">
 							<input type="checkbox" class="form-check-input" id="check">
