--- a/templates/panel.html.twig
+++ b/templates/panel.html.twig
@@ -12,7 +12,7 @@ Panel Admina
             <table class="table table-dark table-striped">
                 <thead>
                   <tr>
-                    <th scope="col">#</th>
+                    <th scope="col">ID</th>
                     <th scope="col">Name</th>
                     <th scope="col">Surname</th>
                     <th scope="col">Email</th>
