--- a/templates/panel.html.twig
+++ b/templates/panel.html.twig
@@ -30,7 +30,7 @@ Panel Admina
                     <td>{{c.surname}}</td>
                     <td>{{c.email}}</td>
                     <td>{{c.telephone}}</td>
-                    <td>{{c.fileurl}}</td>
+                    <td><a href="{{c.fileurl}}">{{c.fileurl}}</td></a>
                     <td><a href="/edit/{{c.id}}"><button type="button" class="btn btn-primary">Edit</button></a></td>
                     <td><a href="/delete/{{c.id}}"><button type="danger" class="btn btn-danger">Remove</button></a></td>
                   </tr>
