--- a/templates/edit.html.twig
+++ b/templates/edit.html.twig
@@ -13,15 +13,15 @@
                     <form method="post" action="/save/{{row.0}}" enctype="multipart/form-data">
 						<div class="mb-3">
 							<label for="name" class="name">Name</label>
-							<input name="name" type="text" class="form-control" id="name" value="{{row.1}}">
+							<input name="name" type="text" class="form-control" id="name" value="{{row.1}}" required>
 						</div>
                         <div class="mb-3">
 							<label for="surname" class="surname">Surname</label>
-							<input name="surname" type="text" class="form-control" id="surname" value="{{row.2}}">
+							<input name="surname" type="text" class="form-control" id="surname" value="{{row.2}}" required>
 						</div>
 						<div class="mb-3">
 							<label for="e-mail" class="form-label">Email address</label>
-							<input name="email" type="email" class="form-control" id="email" value="{{row.3}}">
+							<input name="email" type="email" class="form-control" id="email" value="{{row.3}}" required>
 						</div>
                         <div class="mb-4">
 							<label for="tel" class="form-label">Telephone</label>
@@ -30,6 +30,7 @@
                         <div class="input-group mb-3">
                             <input name="file" type="file" class="form-control" id="file">
                         </div>
+						<input type="hidden" name="token" value="{{ csrf_token('edit') }}"/>
 						<button type="submit" class="btn btn-primary">Submit</button>
 					</form>
 				</div>
